// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      0,
      125,
      9,
      65,
      203,
      244,
      59,
      186,
      139,
      160,
      96,
      214,
      80,
      110,
      223,
      135,
      202,
      43,
      216,
      53,
      67,
      114,
      248,
      141,
      117,
      152,
      187,
      181,
      151,
      147,
      20,
      185,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 587703305517770651443581700965463419402329990676290745771558099600379869110n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
    42,
    176,
    158,
    178,
    25,
    88,
    63,
    74,
    89,
    165,
    208,
    98,
    58,
    222,
    52,
    109,
    150,
    43,
    205,
    78,
    70,
    177,
    29,
    160,
    71,
    201,
    4,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 14183899854343735726273072423861389595545367822703803926156437266914765787587n,
}
`;

exports[`abis wasm bindings hash constructor info (max args) 1`] = `
{
  "data": [
    6,
    127,
    250,
    108,
    115,
    140,
    194,
    58,
    155,
    126,
    77,
    172,
    138,
    33,
    56,
    45,
    60,
    49,
    53,
    1,
    132,
    78,
    225,
    189,
    96,
    36,
    20,
    194,
    195,
    179,
    254,
    239,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hash constructor info 2 args 1`] = `
{
  "data": [
    8,
    32,
    166,
    70,
    82,
    251,
    130,
    41,
    118,
    69,
    174,
    93,
    168,
    126,
    225,
    80,
    199,
    219,
    105,
    158,
    51,
    11,
    131,
    193,
    242,
    88,
    148,
    45,
    101,
    116,
    190,
    202,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    3,
    215,
    112,
    230,
    112,
    168,
    8,
    190,
    95,
    206,
    52,
    172,
    46,
    85,
    55,
    190,
    134,
    187,
    169,
    57,
    109,
    253,
    250,
    109,
    224,
    150,
    49,
    156,
    32,
    17,
    205,
    37,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    22,
    104,
    90,
    0,
    199,
    89,
    155,
    69,
    214,
    179,
    204,
    72,
    181,
    157,
    142,
    51,
    170,
    40,
    49,
    177,
    215,
    225,
    132,
    122,
    50,
    209,
    161,
    11,
    43,
    123,
    45,
    134,
  ],
  "type": "Buffer",
}
`;
